Fix rosidl_generator_java_warnings (osrf/ros2_java#77)
Signed-off-by: Ivan Santiago Paunovic <ivanpauno@ekumenlabs.com>